# notion-mcp

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/notion_mcp/: __init__.py  cli.py  core.py
tests/: test_cli.py
