[project]
name = "notion-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src", "tests"]
strict = true
disable_error_code = ["import-untyped"]

[mypy-mcp.tool]
ignore_errors = true


[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "docformatter>=1.7.5",
    "mypy==1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff==0.9.7",
]

