[project]
name = "notion-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "notion-client>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[mypy-mcp.tool]
ignore_errors = true


[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "docformatter>=1.7.5",
    "gevent>=24.11.1",
    "mypy==1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff==0.9.7",
]

[project.scripts]
cli = "notion_mcp.cli:run_main"

[tool.mypy]
files = ["src", "tests"]
strict = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread", "gevent"]
omit = ["src/notion_mcp/cli.py"]
